2007-08-09 [colin]	2.10.0cvs109

	* src/editldap.c
		Fix port being reset to 636 on SSL
	* src/folder.c
		Fix folder_item_get_msg_num_by_file
		on drafts/queue folders

2007-08-09 [wwp]	2.10.0cvs108

	* src/folder.c
		Fix tags DB path in Windows (thanks to Colin): '/' is a valid
		path divider in Windows, but Glib uses '\' as G_DIR_SEPARATOR.


2007-08-09 [colin]	2.10.0cvs107

	* src/folderview.c
	* src/summaryview.c
	* src/gtk/prefswindow.c
		A few Maemo layout fixes

2007-08-09 [paul]	2.10.0cvs106

	* src/prefs_account.c
		remove the hyphen from plug-ins to
		match everywhere else

2007-08-08 [wwp]	2.10.0cvs105

	* src/prefs_folder_item.c
		Fix an extraneous stealth ^L char.

2007-08-08 [wwp]	2.10.0cvs104

	* src/prefs_folder_item.c
		Better fix, group variables declarations (USE_ASPELL).

2007-08-08 [wwp]	2.10.0cvs103

	* src/prefs_folder_item.c
		Fix compilation w/ USE_ASPELL set (broken
		by 2.10.0cvs102).

2007-08-08 [ticho]	2.10.0cvs102

	* src/prefs_folder_item.c
		Migrate two deprecated GtkOptionMenu widgets to GtkComboBox.

2007-08-08 [colin]	2.10.0cvs101

	* src/imap.c
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		Close selected mailbox before doing
		status on it.

2007-08-08 [colin]	2.10.0cvs100

	* src/html.c
		Complete symbol table, thanks to wwp.
		Fixes bug 1284, 'The html -> text 
		converter ignores entities'
	* src/msgcache.c
		Fix possible fd leak

2007-08-08 [colin]	2.10.0cvs99

	* src/imap.c
		Better way to fetch UIDs on non-UIDPLUS servers

2007-08-07 [colin]	2.10.0cvs98

	* src/imap.c
		fix bug 1275, 'auto-saved draft messages not 
		always being removed'; Also, make multiple
		copy (in the same account) faster by matching
		source/destination message UIDs.
	* src/messageview.c
		Don't try to reshow deleted mail
	* src/msgcache.c
		Fix leak on error path

2007-08-07 [wwp]	2.10.0cvs97

	* manual/account.xml
	* manual/advanced.xml
	* manual/fr/account.xml
	* manual/fr/advanced.xml