@@ -2763,3 +2763,4 @@
 ( cvs diff -u -r 1.207.2.171 -r 1.207.2.172 src/folderview.c;  cvs diff -u -r 1.395.2.317 -r 1.395.2.318 src/summaryview.c;  cvs diff -u -r 1.12.2.39 -r 1.12.2.40 src/gtk/prefswindow.c;  ) > 2.10.0cvs107.patchset
 ( cvs diff -u -r 1.213.2.153 -r 1.213.2.154 src/folder.c;  ) > 2.10.0cvs108.patchset
 ( cvs diff -u -r 1.8.2.23 -r 1.8.2.24 src/editldap.c;  cvs diff -u -r 1.213.2.154 -r 1.213.2.155 src/folder.c;  ) > 2.10.0cvs109.patchset
+( cvs diff -u -r 1.179.2.180 -r 1.179.2.181 src/imap.c;  cvs diff -u -r 1.1.4.6 -r 1.1.4.7 src/etpan/etpan-thread-manager-types.h;  cvs diff -u -r 1.1.4.81 -r 1.1.4.82 src/etpan/imap-thread.c;  cvs diff -u -r 1.1.4.18 -r 1.1.4.19 src/etpan/imap-thread.h;  ) > 2.10.0cvs110.patchset
