@@ -55,7 +55,12 @@ int imap_threaded_status(Folder * folder, const char * mb,
 		guint mask);
 int imap_threaded_close(Folder * folder);
 
-int imap_threaded_noop(Folder * folder, unsigned int * p_exists);
+int imap_threaded_noop(Folder * folder, unsigned int * p_exists, 
+		       unsigned int *p_recent, 
+		       unsigned int *p_expunge,
+		       unsigned int *p_unseen,
+		       unsigned int *p_uidnext,
+		       unsigned int *p_uidval);
 int imap_threaded_starttls(Folder * folder, const gchar *host, int port);
 int imap_threaded_create(Folder * folder, const char * mb);
 int imap_threaded_rename(Folder * folder,
